[gd_scene load_steps=3 format=2]

[ext_resource path="res://CompassRose.gd" type="Script" id=1]
[ext_resource path="res://images/dice.png" type="Texture" id=2]

[node name="CompassRose" type="Node2D"]
position = Vector2( 49, 273 )
script = ExtResource( 1 )

[node name="RIGHT_sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 2 )
offset = Vector2( 32, 0 )
hframes = 6

[node name="LEFT_sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 2 )
offset = Vector2( -32, 0 )
hframes = 6

[node name="DOWN_sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 2 )
offset = Vector2( 0, 32 )
hframes = 6

[node name="UP_sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 2 )
offset = Vector2( 0, -32 )
hframes = 6
